Check first presentation

--- a/notebooks/neural_networks_01.ipynb
+++ b/notebooks/neural_networks_01.ipynb
@@ -63,7 +63,7 @@
       "metadata": {},
       "source": [
         "\n",
-        "## Topic 2 (Cont.): The Anatomy of the Network - Layers\n",
+        "## The Anatomy of the Network - Layers\n",
         "\n",
         "A neural network organizes these neurons into distinct layers.\n",
         "\n",
@@ -93,7 +93,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Topic 3: The \"Hope\" for the Hidden Layers - Abstraction\n",
+        "## The Hidden Layers - Abstraction\n",
         "\n",
         "How does a network recognize a \"9\"? We recognize it as a **loop on top of a line**.\n",
         "\n",
@@ -125,7 +125,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Topic 4 (Cont.): The Mechanics: Bias\n",
+        "## The Mechanics: Bias\n",
         "\n",
         "After calculating the **weighted sum** (summing up previous neuron activations multiplied by their weights), we add one final number called a **bias**.\n",
         "\n",
@@ -140,7 +140,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Topic 5: The \"Squishification\": Activation Functions\n",
+        "## The \"Squishification\": Activation Functions\n",
         "\n",
         "The `Neuron's Input` (weighted sum + bias) can be any real number. We need to \"squish\" this value into the **0-to-1 range** to become the neuron's final activation. This is the job of an **activation function**.\n",
         "\n",
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "sfHIjBRwm0tN"
       },
