--- a/notebooks/neural_networks_01.ipynb
+++ b/notebooks/neural_networks_01.ipynb
@@ -747,7 +747,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
