--- a/notebooks/lesson_05_example.ipynb
+++ b/notebooks/lesson_05_example.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "01476bda",
    "metadata": {},
    "outputs": [
@@ -169,51 +169,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# Call the function to get the data\n",
-    "# Note: I've corrected some bugs in the original file parsing logic (magic numbers)\n",
-    "# to ensure it runs correctly. The function below is the corrected version.\n",
+    "from utils import get_mnist_corrected\n",
     "\n",
-    "def get_mnist_corrected():\n",
-    "    import gzip, os, struct\n",
-    "    from urllib.request import urlretrieve\n",
-    "    \n",
-    "    def parse_data(src_url, num_samples, is_labels=False):\n",
-    "        print(f\"Downloading and parsing {src_url}\")\n",
-    "        gzfname, _ = urlretrieve(src_url, \"./delete.me\")\n",
-    "        try:\n",
-    "            with gzip.open(gzfname, 'rb') as gz:\n",
-    "                magic_number = struct.unpack('>I', gz.read(4))[0]\n",
-    "                expected_magic = 2049 if is_labels else 2051\n",
-    "                if magic_number != expected_magic:\n",
-    "                    raise ValueError(f\"Invalid magic number {magic_number}, expected {expected_magic}\")\n",
-    "                \n",
-    "                num_items = struct.unpack('>I', gz.read(4))[0]\n",
-    "                if num_items != num_samples:\n",
-    "                    raise ValueError(f\"Expected {num_samples} items, file contains {num_items}\")\n",
-    "\n",
-    "                if is_labels:\n",
-    "                    data = np.frombuffer(gz.read(), dtype=np.uint8)\n",
-    "                else:\n",
-    "                    num_rows = struct.unpack('>I', gz.read(4))[0]\n",
-    "                    num_cols = struct.unpack('>I', gz.read(4))[0]\n",
-    "                    if num_rows != 28 or num_cols != 28:\n",
-    "                        raise ValueError(\"Images are not 28x28\")\n",
-    "                    data = np.frombuffer(gz.read(), dtype=np.uint8).reshape(num_samples, 28, 28)\n",
-    "        finally:\n",
-    "            os.remove(gzfname)\n",
-    "        return data\n",
-    "\n",
-    "    server = 'https://raw.githubusercontent.com/fgnt/mnist/master'\n",
-    "    train_count, test_count = 60000, 10000\n",
-    "    \n",
-    "    x_train = parse_data(f'{server}/train-images-idx3-ubyte.gz', train_count) / 255.0\n",
-    "    y_train = parse_data(f'{server}/train-labels-idx1-ubyte.gz', train_count, is_labels=True)\n",
-    "    x_test = parse_data(f'{server}/t10k-images-idx3-ubyte.gz', test_count) / 255.0\n",
-    "    y_test = parse_data(f'{server}/t10k-labels-idx1-ubyte.gz', test_count, is_labels=True)\n",
-    "    \n",
-    "    return x_train, y_train, x_test, y_test\n",
-    "\n",
-    "# Execute the corrected function\n",
     "x_train, y_train, x_test, y_test = get_mnist_corrected()\n",
     "\n",
     "# Print the shapes to verify\n",
@@ -374,7 +331,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -388,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
