--- a/notebooks/lesson_05_example.ipynb
+++ b/notebooks/lesson_05_example.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "d59c166c",
    "metadata": {},
    "outputs": [
@@ -213,15 +213,15 @@
      "output_type": "stream",
      "text": [
       "Shape of flattened training data: (60000, 784)\n",
-      "Iteration 0, Loss: 2.3009\n",
-      "Iteration 100, Loss: 0.6096\n",
-      "Iteration 200, Loss: 0.4898\n",
-      "Iteration 300, Loss: 0.4406\n",
-      "Iteration 400, Loss: 0.4123\n",
-      "Iteration 500, Loss: 0.3933\n",
-      "Iteration 600, Loss: 0.3795\n",
-      "Iteration 700, Loss: 0.3688\n",
-      "Iteration 800, Loss: 0.3602\n",
+      "Iteration 0, Loss: 2.3010\n",
+      "Iteration 100, Loss: 0.6083\n",
+      "Iteration 200, Loss: 0.4890\n",
+      "Iteration 300, Loss: 0.4401\n",
+      "Iteration 400, Loss: 0.4120\n",
+      "Iteration 500, Loss: 0.3931\n",
+      "Iteration 600, Loss: 0.3793\n",
+      "Iteration 700, Loss: 0.3686\n",
+      "Iteration 800, Loss: 0.3601\n",
       "Iteration 900, Loss: 0.3530\n",
       "\n",
       "✅ Training complete!\n"
@@ -326,6 +326,14 @@
     "    axes[i].axis('off')\n",
     "plt.suptitle(\"Sample Test Predictions\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "badf8fbc",
+   "metadata": {},
+   "source": [
+    "## [MLU-EXPLAIN](https://mlu-explain.github.io/)"
    ]
   }
  ],
